# vc-statement-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIOR_ART.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_administrator_request.yml
.github/workflows/: ci.yml
docs/: DECISIONS.md  EXTENDING.md  ILPA_ALIGNMENT.md  PHILOSOPHY.md  PLUGINS.md
examples/: quickstart.py
examples/fixtures/: generate.py  generate_gaap_scpc.py
examples/real_world/: README.md
src/vc_statement_parser/: __init__.py  _pdf.py  cli.py  dispatcher.py  models.py  parse.py  verification.py
src/vc_statement_parser/extractors/: __init__.py  base.py  gaap_scpc.py  llm.py  standish.py
tests/: conftest.py  test_cli.py  test_dispatcher.py  test_extractors_gaap_scpc.py  test_models.py  test_parse.py  test_plugin_discovery.py  test_verification.py
