[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vc-statement-parser"
version = "0.1.0"
description = "Parse LP capital account statements from fund administrators into ILPA-aligned, arithmetic-verified JSON."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "VenturFlow contributors" }]
keywords = [
    "private-equity",
    "venture-capital",
    "limited-partner",
    "fund-administrator",
    "ilpa",
    "pdf",
    "extraction",
    "capital-account",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# LLM fallback uses the OpenAI Chat Completions API. Works with any
# OpenAI-compatible provider (OpenAI, OpenRouter, Groq, Together, DeepSeek,
# Ollama, LM Studio, vLLM, ...) — not Claude-specific. Configure via
# OPENAI_API_KEY + OPENAI_BASE_URL env vars.
llm = [
    "instructor>=1.6",
    "openai>=1.0",
]
fixtures = [
    "reportlab>=4.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "reportlab>=4.2",
    "instructor>=1.6",
    "openai>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
vc-statement-parse = "vc_statement_parser.cli:app"

[project.urls]
Homepage = "https://github.com/venturflow/vc-statement-parser"
Repository = "https://github.com/venturflow/vc-statement-parser"
Issues = "https://github.com/venturflow/vc-statement-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vc_statement_parser"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "docs", "README.md", "LICENSE", "PRIOR_ART.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "PL",              # pylint subset
    "N",               # pep8-naming
    "S",               # bandit (security)
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic numbers in tests
    "E501",     # line length (handled by formatter)
    "S101",     # use of assert in src — we use it for type narrowing
]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is fine, magic-number constants are fine, hardcoded test
# tokens are fine.
"tests/**" = ["PLR2004", "S101", "S105", "S106", "S107"]
# Example fixture renderers are intentionally one-shot layout scripts where
# breaking them up by function harms readability. Allow long, linear procedural
# code there.
"examples/**" = ["PLR2004", "PLR0915"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["src/vc_statement_parser"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "pypdfium2.*", "reportlab.*", "instructor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/vc_statement_parser"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
